--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1215,7 +1215,10 @@ a:focus {
 }
 
 .blog-content table {
-  width: 100%;
+  width: fit-content;
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 1.5rem;
   border-collapse: collapse;
   display: block;
